# Boids

./: LICENSE  README.md
parallel/: CMakeLists.txt  README.md  boids.cpp  boids.h  main.cpp
sequential/: CMakeLists.txt  boids.cpp  boids.h  main.cpp  readme.md
